--- a/Coupang/bin/main/application.properties
+++ b/Coupang/bin/main/application.properties
@@ -1,1 +1,10 @@
 
+#spring.jpa.hibernate.ddl-auto=update
+spring.mvc.view.prefix =/WEB-INF/view/
+spring.mvc.view.suffix = .jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Coupang?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1111
+server.port:8888
+
